[package]
name = "DicomReaderRs"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dicom-core = "0.5.4"
dicom-object = "0.5.4"
dicom-dictionary-std = "0.5.0"